--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/server.js",
     "dev": "nodemon --exec sucrase-node src/server.js"
   },
   "dependencies": {
