--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon --exec sucrase-node src/server.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec sucrase-node src/index.js"
   },
   "dependencies": {
     "bad-words": "3.0.0",
